--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
   "name": "promise-series",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Run promises in series",
-  "main": "index.js",
+  "repository": "github:brillout/promise-serial",
+  "main": "dist/index.es5.js",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "scripts": {
+    "build": "./node_modules/.bin/babel index.es2015.js > dist/index.es5.js"
+  },
   "dependencies": {
     "bluebird": "^3.4.1"
   },
-  "repository": "github:brillout/promise-serial"
+  "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0"
+  }
 }
